# ReturnGuard

./: README.md  TEST_REPORT.md  pyproject.toml  render.yaml
Desktop/ReturnGuard/: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
Desktop/ReturnGuard/.github/workflows/: ci.yml
Desktop/ReturnGuard/agent/: deps.py  graph.py  llm.py  reply.py  risk_model.py  runner.py  stub_brain.py
Desktop/ReturnGuard/agent/decision/: cost_model.py  eligibility.py  (+2 more)
Desktop/ReturnGuard/config/: __init__.py  settings.py
Desktop/ReturnGuard/db/: dataset.py  repository.py  seed.py
Desktop/ReturnGuard/docs/: ReturnGuard_Build_Plan.docx
Desktop/ReturnGuard/eval/: cases.yaml  runner.py
Desktop/ReturnGuard/events/: consumer.py  producer.py  schemas.py
Desktop/ReturnGuard/mcp_servers/: _base.py  customer_service.py  fraud_service.py  signals.py
Desktop/ReturnGuard/observability/: logging.py  tracing.py
Desktop/ReturnGuard/policies/: embed.py  retrieve.py  store.py
Desktop/ReturnGuard/scripts/: demo.py  demo.sh  smoke.sh
Desktop/ReturnGuard/service/: app.py  metrics.py  schemas.py
Desktop/ReturnGuard/tools/: actions.py
agent/: checkpointer.py  conversation.py  credibility.py  evidence.py  graph.py  llm.py  stub_brain.py  validity.py
agent/decision/: guardrails.py  select.py
agent/nodes/: logger.py  risk.py
config/: settings.py
db/: schema.sql  seed.py
events/: emit.py
mcp_servers/: order_service.py
observability/: instrument.py  tracing.py
policies/: corpus_loader.py  embedder.py
policies/corpus/: non_returnable.md  windows.md
scripts/: _preview_serve.py  smoke.sh
service/: app.py  auth_store.py  cache.py  chat_store.py  demo_seed.py  policy_store.py  rating_store.py  rep_store.py  wallet_store.py
service/routes/: admin.py  auth.py  chat.py  escalations.py  metrics.py  portal.py  reps.py  tenants.py  wallet.py
service/static/: admin.html  app.css  chat.html  client.html  customer.html  landing.html  login.html  rep.html
tests/concurrency/: test_qa_concurrency.py
tests/e2e/: test_qa_decision_matrix.py
tests/failure/: test_qa_faults.py
tests/integration/: test_chat.py  test_demo.py  test_eval.py  test_events.py  test_graph_skeleton.py  test_hitl_execution.py  test_metrics.py  test_observability.py  test_qa_audit_rag_graph.py  test_qa_durability_eval.py  test_wallet_platform.py
tests/perf/: test_qa_perf.py
tests/property/: test_qa_properties.py
tests/safety/: test_qa_financial_integrity.py  test_qa_injection_leak.py  test_qa_secrets.py  test_responder_leak.py
tests/unit/: test_cost_model.py  test_dataset.py  test_fraud_gates.py  test_qa_boundaries.py
tools/: data_access.py
(+29 files in other folders)
